--- a/Rx.NET/Source/System.Reactive.Windows.Threading/project.json
+++ b/Rx.NET/Source/System.Reactive.Windows.Threading/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "version": "3.0.0-*",
     "title": "Reactive Extensions - WPF Helpers",
     "description": "Windows Presentation Foundation extensions library for Rx. Contains scheduler functionality for the WPF Dispatcher.",
@@ -9,13 +9,21 @@
     "projectUrl": "http://go.microsoft.com/fwlink/?LinkId=261273",
     "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
     "requireLicenseAcceptance": true,
-
     "compilationOptions": {
         "keyFile": "../35MSSharedLib1024.snk",
         "publicSign": true,
         "define": [ "SIGNED" ]
     },
-
+    "configurations": {
+        "ReleaseDelaySigned": {
+            "compilationOptions": {
+                "publicSign": false,
+                "delaySign": true,
+                "define": [ "RELEASE", "TRACE" ],
+                "optimize": true
+            }
+        }
+    },
     "dependencies": {
         "System.Reactive.Interfaces": { "target": "project" },
         "System.Reactive.Core": { "target": "project" }
@@ -118,7 +126,6 @@
                     "type": "build"
                 }
             }
-
         },
         "uap10.0": {
             "imports": [ "dotnet5.4" ],
@@ -169,7 +176,6 @@
                 ]
             },
             "dependencies": {
-
             }
         }
     }
