--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -1,243 +1,246 @@
 {
-    "version": "3.0.0-*",
-    "title": "Reactive Extensions - Platform Services Library",
-    "description": "Reactive Extensions Platform Services Library used to access platform-specific functionality and enlightenment services.",
-    "authors": [ "Microsoft" ],
-    "copyright": "Copyright (C) Microsoft Corporation",
-    "tags": [ "Rx", "Reactive", "Extensions", "Observable", "LINQ", "Events" ],
-    "packOptions": {
-      "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
-      "projectUrl": "http://go.microsoft.com/fwlink/?LinkId=261273",
-      "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
-      "requireLicenseAcceptance": true
-    },
-    
-    "buildOptions": {
-        "keyFile": "../35MSSharedLib1024.snk",
-        "publicSign": true,
-        "define": [ "SIGNED" ],
-        "compile": {
-          "exclude": [ "Strings_PlatformServices.Designer.cs" ]
-        }
-    },
-    "configurations": {
-        "ReleaseDelaySigned": {
-            "buildOptions": {
-                "publicSign": false,
-                "delaySign": true,
-                "define": [ "RELEASE", "TRACE" ],
-                "optimize": true
-            }
-        }
-    },
-    "dependencies": {
-        "System.Reactive.Linq": { "target": "project" }
-    },
-    "frameworks": {
-        "net40": {
-            "buildOptions": {
-                "define": [
-                    "NO_TASK_DELAY",
-                    "HAS_APTCA",
-                    "HAS_WINFORMS",
-                    "USE_TIMER_SELF_ROOT",
-                    "NO_WEAKREFOFT",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR40"
-                ]
-            }
-        },
-        "net45": {
-            "buildOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "HAS_DISPATCHER_PRIORITY",
-                    "HAS_WINFORMS",
-                    "USE_TIMER_SELF_ROOT",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR45"
-                ]
-            }
-        },
-        "net46": {
-            "buildOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "HAS_DISPATCHER_PRIORITY",
-                    "HAS_TPL46",
-                    "HAS_WINFORMS",
-                    "USE_TIMER_SELF_ROOT",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR46"
-                ]
-            }
-        },
-        "netstandard1.0": {
-            "buildOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "NO_REMOTING",
-                    "NO_SERIALIZABLE",
-                    "NO_THREAD",
-                    "CRIPPLED_REFLECTION",
-                    "NO_CDS_COLLECTIONS",
-                    "USE_TIMER_SELF_ROOT",
-                    "PLIB"
-                ]
-            },
-            "dependencies": {
-            }
-        },
-        "netstandard1.3": {
-            "compilationOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "HAS_TPL46",
-                    "NO_REMOTING",
-                    "NO_SERIALIZABLE",
-                    "NO_THREAD",
-                    "CRIPPLED_REFLECTION",
-                    "PLIB",
-                    "USE_TIMER_SELF_ROOT"
-                ]
-            },
-            "dependencies": {
-            }
-        },
-        "wpa81": {
-            "imports": [ "dotnet5.2" ],
-            "buildOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "NO_REMOTING",
-                    "NO_SERIALIZABLE",
-                    "NO_THREAD",
-                    "CRIPPLED_REFLECTION",
-                    "USE_TIMER_SELF_ROOT",
-                    "WINDOWS",
-                    "WINDOWS81"
-                ]
-            },
-            "dependencies": {
-                "Microsoft.TargetingPack.Private.WinRT": {
-                    "version": "1.0.1",
-                    "type": "build"
-                },
-                "Microsoft.TargetingPack.Private.WindowsPhone.v8.1": {
-                    "version": "1.0.1",
-                    "type": "build"
-                }
-            }
-        },
-        "win81": {
-            "imports": [ "dotnet5.2" ],
-            "buildOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "NO_REMOTING",
-                    "NO_SERIALIZABLE",
-                    "NO_THREAD",
-                    "CRIPPLED_REFLECTION",
-                    "USE_TIMER_SELF_ROOT",
-                    "WINDOWS",
-                    "WINDOWS81"
-                ]
-            },
-            "dependencies": {
-                "Microsoft.TargetingPack.Private.WinRT": {
-                    "version": "1.0.1",
-                    "type": "build"
-                },
-                "Microsoft.TargetingPack.Private.NETCore.v4.5.1": {
-                    "version": "1.0.0",
-                    "type": "build"
-                }
-            }
-        },
-        "uap10.0": {
-            "imports": [ "dotnet5.4" ],
-            "buildOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "HAS_TPL46",
-                    "NO_REMOTING",
-                    "NO_SERIALIZABLE",
-                    "NO_THREAD",
-                    "CRIPPLED_REFLECTION",
-                    "WINDOWS",
-                    "USE_TIMER_SELF_ROOT"
-                ]
-            },
-            "dependencies": {
-                "Microsoft.TargetingPack.Private.WinRT": {
-                    "version": "1.0.1",
-                    "type": "build"
-                },
-                "Microsoft.NETCore.UniversalWindowsPlatform": {
-                    "version": "5.2.0-rc2-24103",
-                    "type": "build"
-                }
-            }
-        },
-        "sl5": {
-            "buildOptions": {
-                "define": [
-                    "NO_RXINTERFACES",
-                    "USE_SL_DISPATCHER",
-                    "NO_SERIALIZABLE",
-                    "NO_REMOTING",
-                    "NO_SEMAPHORE",
-                    "NO_STOPWATCH",
-                    "NO_CDS",
-                    "NO_TASK_DELAY",
-                    "NO_WEAKREFOFT",
-                    "NO_SORTEDDICTIONARY",
-                    "SILVERLIGHT",
-                    "SILVERLIGHT5"
-                ]
-            },
-            "dependencies": {
-            }
-        }
+  "version": "3.0.0-*",
+  "title": "Reactive Extensions - Platform Services Library",
+  "description":
+    "Reactive Extensions Platform Services Library used to access platform-specific functionality and enlightenment services.",
+  "authors": ["Microsoft"],
+  "copyright": "Copyright (C) Microsoft Corporation",
+
+  "packOptions": {
+    "tags": ["Rx", "Reactive", "Extensions", "Observable", "LINQ", "Events"],
+    "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
+    "projectUrl": "http://go.microsoft.com/fwlink/?LinkId=261273",
+    "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
+    "requireLicenseAcceptance": true
+  },
+
+  "buildOptions": {
+    "keyFile": "../35MSSharedLib1024.snk",
+    "publicSign": true,
+    "define": ["SIGNED"],
+    "compile": {
+      "exclude": ["Strings_PlatformServices.Designer.cs"]
     }
+  },
+  "configurations": {
+    "ReleaseDelaySigned": {
+      "buildOptions": {
+        "publicSign": false,
+        "delaySign": true,
+        "define": ["RELEASE", "TRACE"],
+        "optimize": true
+      }
+    }
+  },
+  "dependencies": {
+    "System.Reactive.Linq": { "target": "project" }
+  },
+  "frameworks": {
+    "net40": {
+      "buildOptions": {
+        "define": [
+          "NO_TASK_DELAY",
+          "HAS_APTCA",
+          "HAS_WINFORMS",
+          "USE_TIMER_SELF_ROOT",
+          "NO_WEAKREFOFT",
+          "DESKTOPCLR",
+          "DESKTOPCLR40"
+        ]
+      }
+    },
+    "net45": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "HAS_DISPATCHER_PRIORITY",
+          "HAS_WINFORMS",
+          "USE_TIMER_SELF_ROOT",
+          "DESKTOPCLR",
+          "DESKTOPCLR45"
+        ]
+      }
+    },
+    "net46": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "HAS_DISPATCHER_PRIORITY",
+          "HAS_TPL46",
+          "HAS_WINFORMS",
+          "USE_TIMER_SELF_ROOT",
+          "DESKTOPCLR",
+          "DESKTOPCLR46"
+        ]
+      }
+    },
+    "netstandard1.0": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",
+          "NO_THREAD",
+          "CRIPPLED_REFLECTION",
+          "NO_CDS_COLLECTIONS",
+          "USE_TIMER_SELF_ROOT",
+          "PLIB"
+        ]
+      },
+      "dependencies": {
+            
+      }
+    },
+    "netstandard1.3": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "HAS_TPL46",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",
+          "NO_THREAD",
+          "CRIPPLED_REFLECTION",
+          "PLIB",
+          "USE_TIMER_SELF_ROOT"
+        ]
+      },
+      "dependencies": {
+            
+      }
+    },
+    "wpa81": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",
+          "NO_THREAD",
+          "CRIPPLED_REFLECTION",
+          "USE_TIMER_SELF_ROOT",
+          "WINDOWS",
+          "WINDOWS81"
+        ]
+      },
+      "dependencies": {
+        "Microsoft.TargetingPack.Private.WinRT": {
+          "version": "1.0.1",
+          "type": "build"
+        },
+        "Microsoft.TargetingPack.Private.WindowsPhone.v8.1": {
+          "version": "1.0.1",
+          "type": "build"
+        }
+      }
+    },
+    "netcore451": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",
+          "NO_THREAD",
+          "CRIPPLED_REFLECTION",
+          "USE_TIMER_SELF_ROOT",
+          "WINDOWS",
+          "WINDOWS81"
+        ]
+      },
+      "dependencies": {
+        "Microsoft.TargetingPack.Private.WinRT": {
+          "version": "1.0.1",
+          "type": "build"
+        },
+        "Microsoft.TargetingPack.Private.NETCore.v4.5.1": {
+          "version": "1.0.0",
+          "type": "build"
+        }
+      }
+    },
+    "uap10.0": {
+      "imports": ["dotnet5.4"],
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "HAS_TPL46",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",
+          "NO_THREAD",
+          "CRIPPLED_REFLECTION",
+          "WINDOWS",
+          "USE_TIMER_SELF_ROOT"
+        ]
+      },
+      "dependencies": {
+        "Microsoft.TargetingPack.Private.WinRT": {
+          "version": "1.0.1",
+          "type": "build"
+        },
+        "Microsoft.NETCore.UniversalWindowsPlatform": {
+          "version": "5.2.0-rc2-24103",
+          "type": "build"
+        }
+      }
+    },
+    "sl5": {
+      "buildOptions": {
+        "define": [
+          "NO_RXINTERFACES",
+          "USE_SL_DISPATCHER",
+          "NO_SERIALIZABLE",
+          "NO_REMOTING",
+          "NO_SEMAPHORE",
+          "NO_STOPWATCH",
+          "NO_CDS",
+          "NO_TASK_DELAY",
+          "NO_WEAKREFOFT",
+          "NO_SORTEDDICTIONARY",
+          "SILVERLIGHT",
+          "SILVERLIGHT5"
+        ]
+      },
+      "dependencies": {
+            
+      }
+    }
+  }
 }
